--- a/NSPkgMgr/NSPkgMgr.csproj
+++ b/NSPkgMgr/NSPkgMgr.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CommandException.cs" />
     <Compile Include="CommandGet.cs" />
     <Compile Include="CommandInvalidArgumentCountException.cs" />
+    <Compile Include="CommandRemove.cs" />
     <Compile Include="CommandSync.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Mode.cs" />
