--- a/NSPkgMgr/NSPkgMgr.csproj
+++ b/NSPkgMgr/NSPkgMgr.csproj
@@ -77,6 +77,7 @@
     <Compile Include="CommandException.cs" />
     <Compile Include="CommandGet.cs" />
     <Compile Include="CommandInvalidArgumentCountException.cs" />
+    <Compile Include="CommandListPkgs.cs" />
     <Compile Include="CommandRemove.cs" />
     <Compile Include="CommandSync.cs" />
     <Compile Include="Config.cs" />
